tetrate/TIS1402/e2e/bad-resource.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bad-resource-1
  namespace: test
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: eg
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: non-existing-service  
      namespace: test
      port: 443
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
