tetrate/TIS1402/e2e/good-resource.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: good-resource-1
  namespace: test
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: eg
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: existing-service  
      namespace: test
      port: 443
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
