tetrate/TIS1402/e2e/service-resource.yaml
apiVersion: v1
kind: Service
metadata:
  name: existing-service
  namespace: test
  annotations: {}
spec:
  selector:
    app: my-app
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
