tetrate/TIS1402/e2e/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: test-enforce-valid-service-refs
spec:
  steps:
    - name: apply-httproute-policy
      try:
        - apply:
            file: ../enforce-valid-service-refs.yaml
        - assert:
            file: policy-assert.yaml

    - name: apply-service-resource
      try: 
        - apply:
            file: service-resource.yaml
            
    - name: apply-good-resource
      try:
        - apply:
            file: good-resource.yaml

    - name: apply-bad-resource (should fail)
      try:
        - apply:
            expect:
              - check:
                  ($error != null): true
            file: bad-resource.yaml
